--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,48 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #fefefe;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.playerGroup{
+  width: 900px;
+  margin-bottom: 30px;
+}
+
+.cardGroup{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+.progressBar{
+  width: 775px;
+  margin: auto;
+}
+
+.buttons{
+  display: flex;
+  width: 900px;
+  margin: 30px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.secondButton{
+  margin-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.secondBadge{
+  margin-left: 10px;
+}
+
+.loadingImg{
+  width: 110px;
+  margin-top: -20px;
+  filter: hue-rotate(250deg);
+}
+
+.loadingSpace{
+  margin-top: 100px;
 }
